@@ -49,6 +49,11 @@ endif::[]
 
 - Support both integer and string log levels, and extra central config values {pull}902[#902]
 
+[float]
+===== Changed
+
+- Rename server_ca_cert to server_ca_cert_file {pull}908[#908]
+
 [[release-notes-3.12.1]]
 ==== 3.12.1 (2020-11-16)
 
